--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,8 +7,34 @@
     <title>This website hates CSS!</title>
   </head>
   <body>
-    <main>
-      <h1>Hello World!</h1>
-    </main>
+    <header>
+      <h1>Joshua Stolle</h1>
+      <nav id="nav">
+        <a href="#contact">Contact</a>
+        <a href="#about">About-Me</a>
+        <a href="#skills">Skills</a>
+      </nav>
+      <img src="assets/cat.jpg" \ />
+      <pre><strong>
+               _                       
+              \`*-.                   
+              )  _`-.                
+              .  : `. .               
+              : _   '  \              
+              ; *` _.   `*-._         
+              `-.-'         `-.      
+              ;       `       `.    
+              :.       .        \   
+              . \  .   :   .-'   .  
+              '  `+.;  ;  '      :  
+              :  '  |    ;       ;-.
+             ; '   : :`-:     _.`* ;
+    [bug] .*' /  .*' ; .*`- +'  `*'
+          `*-*   `*-*  `*-*'      
+        </strong></pre>
+
+      <marquee behavior="alternate">&#129439;</marquee>
+    </header>
+    <main></main>
   </body>
 </html>
