add about and contacts section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>This website hates CSS!</title>
   </head>
+
   <body>
     <header>
       <h1>Joshua Stolle</h1>
@@ -14,7 +15,7 @@
         <a href="#about">About-Me</a>
         <a href="#skills">Skills</a>
       </nav>
-      <img src="assets/cat.jpg" \ />
+      <img src="assets/cat.jpg" alt="cat" />
       <pre><strong>
                _                       
               \`*-.                   
@@ -32,9 +33,44 @@
     [bug] .*' /  .*' ; .*`- +'  `*'
           `*-*   `*-*  `*-*'      
         </strong></pre>
-
       <marquee behavior="alternate">&#129439;</marquee>
     </header>
-    <main></main>
+
+    <main>
+      <article id="about">
+        <h2>About Me</h2>
+        <p>
+          Hello World! <br />
+          I love Foo, Bar, Lorem Ipsum and of course video games! I'm a new
+          fish, but in reality I'm actually a cat.
+        </p>
+      </article>
+
+      <section id="contact">
+        <h3>Contact</h3>
+        <ul>
+          <li>Num: <a href="tel:+12345678910">+1 2345 678910</a></li>
+          <li>
+            Mail:
+            <a href="mailto:scammepls@lolmail.com">scammepls@lolmail.com</a>
+          </li>
+        </ul>
+        <span>
+          <a href="https://github.com/Satttoshi"
+            ><img src="assets/github-circled-64.png" alt="github"
+          /></a>
+          <a href="https://www.linkedin.com/in/joshua-stolle-a24a97168/">
+            <img src="assets/linkedin-circled-64.png" alt="linkedin"
+          /></a>
+          <a href="https://twitter.com/yusheeh">
+            <img src="assets/twitter-circled-64.png" alt="twitter"
+          /></a>
+        </span>
+      </section>
+
+      <section>
+        <h4>Skills</h4>
+      </section>
+    </main>
   </body>
 </html>
