add skills and footer section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <h1>Joshua Stolle</h1>
+      <h1 id="header">Joshua Stolle</h1>
       <nav id="nav">
         <a href="#contact">Contact</a>
         <a href="#about">About-Me</a>
@@ -46,7 +46,7 @@
         </p>
       </article>
 
-      <section id="contact">
+      <aside id="contact">
         <h3>Contact</h3>
         <ul>
           <li>Num: <a href="tel:+12345678910">+1 2345 678910</a></li>
@@ -66,11 +66,19 @@
             <img src="assets/twitter-circled-64.png" alt="twitter"
           /></a>
         </span>
+      </aside>
+
+      <section id="skills">
+        <h4>Skills</h4>
+        <ul>
+          <li>html obviously, check this insane website lol</li>
+          <li>unfortunately nothing else &#x1F61E;</li>
+        </ul>
       </section>
 
-      <section>
-        <h4>Skills</h4>
-      </section>
+      <footer>
+        <a href="#header">back to top</a>
+      </footer>
     </main>
   </body>
 </html>
