fix Contact Section

--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
           </li>
         </ul>
         <span>
-          <a href="https://github.com/Satttoshi"
+          <a href="https://github.com/Satttoshi" target="_blank"
             ><img src="assets/github-circled-64.png" alt="github"
           /></a>
-          <a href="https://www.linkedin.com/in/joshua-stolle-a24a97168/">
+          <a
+            href="https://www.linkedin.com/in/joshua-stolle-a24a97168/"
+            target="_blank"
+          >
             <img src="assets/linkedin-circled-64.png" alt="linkedin"
           /></a>
-          <a href="https://twitter.com/yusheeh">
+          <a href="https://twitter.com/yusheeh" target="_blank">
             <img src="assets/twitter-circled-64.png" alt="twitter"
           /></a>
         </span>
