--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
 
       <aside id="contact">
         <h2>Contact</h2>
-        <ul>
+        <ul class="contact-list">
           <li>Num: <a href="tel:+12345678910">+1 2345 678910</a></li>
           <li>
             Mail:
             <a href="mailto:scammepls@lolmail.com">scammepls@lolmail.com</a>
+          </li>
+          <li>
+            Site:
+            <a href="http://127.0.0.1:5500/">Awesome Website</a>
           </li>
         </ul>
         <span>
@@ -64,6 +68,7 @@
         <h2>Skills</h2>
         <ul>
           <li class="emoji-list">html obviously, check this insane website</li>
+          <li class="emoji-list">css too, I love counter-strike source</li>
           <li class="emoji-list">unfortunately nothing else</li>
         </ul>
       </section>
